# Sugar-activity-on-Demand

./: .gitignore  README.md  activity.py  install.sh  main.py  pyproject.toml  setup.py
activity/: activity.info
aodstudio/: main.py
aodstudio/model/: aodcodegen.py
aodstudio/ui/: panel.py  window.py
core/: projects.py
docs/: ARCHITECTURE.md
exports/: flatpak.py
generation/: codegen.py  critic.py  generator.py  pipeline.py  prompts.py  rag.py  validator.py
llm/: enhance.py  providers.py
packaging/appimage/: AppRun  build-appimage.sh  sugar-activity-studio.desktop
service/: jobs.py  service.py  sessions.py
tests/: conftest.py  test_activity_bundle.py  test_credentials.py  test_critic.py  test_enhance.py  test_flatpak.py  test_generator.py  test_pipeline.py  test_preview.py  test_projects.py  test_prompts.py  test_providers.py  test_rag.py  test_refine.py  test_service.py  test_spec.py  test_studio.py  test_validator.py
ui/: panel.py  window.py
